// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`URL Components Snapshots > UrlDetailsModal > should render when closed 1`] = `
"<dialog data-v-dd4104c0="" class="modal-dialog shadow-xl">
  <div data-v-dd4104c0="" class="modal-content container-primary">
    <modal-header-stub data-v-dd4104c0="" title="URL Details: abc123"></modal-header-stub>
    <div data-v-dd4104c0="" class="modal-body">
      <qr-code-section-stub data-v-dd4104c0="" short-code="abc123" qr-code-url=""></qr-code-section-stub>
      <!--v-if-->
      <!--v-if-->
      <url-form-stub data-v-dd4104c0="" short-url="http://localhost:3000/abc123" short-code="abc123" original-url="https://example.com" title="Example Website" owner="testuser"></url-form-stub>
    </div>
  </div>
</dialog>"
`;

exports[`URL Components Snapshots > UrlDetailsModal > should render when open 1`] = `
"<dialog data-v-dd4104c0="" class="modal-dialog shadow-xl">
  <div data-v-dd4104c0="" class="modal-content container-primary">
    <modal-header-stub data-v-dd4104c0="" title="URL Details: abc123"></modal-header-stub>
    <div data-v-dd4104c0="" class="modal-body">
      <qr-code-section-stub data-v-dd4104c0="" short-code="abc123" qr-code-url=""></qr-code-section-stub>
      <!--v-if-->
      <!--v-if-->
      <url-form-stub data-v-dd4104c0="" short-url="http://localhost:3000/abc123" short-code="abc123" original-url="https://example.com" title="Example Website" owner="testuser"></url-form-stub>
    </div>
  </div>
</dialog>"
`;

exports[`URL Components Snapshots > UrlDetailsModal > should render with different shortCode formats 1`] = `
"<dialog data-v-dd4104c0="" class="modal-dialog shadow-xl">
  <div data-v-dd4104c0="" class="modal-content container-primary">
    <modal-header-stub data-v-dd4104c0="" title="URL Details: ABC-123_test"></modal-header-stub>
    <div data-v-dd4104c0="" class="modal-body">
      <qr-code-section-stub data-v-dd4104c0="" short-code="ABC-123_test" qr-code-url=""></qr-code-section-stub>
      <!--v-if-->
      <!--v-if-->
      <url-form-stub data-v-dd4104c0="" short-url="http://localhost:3000/ABC-123_test" short-code="ABC-123_test" original-url="https://example.com" title="Example Website" owner="testuser"></url-form-stub>
    </div>
  </div>
</dialog>"
`;

exports[`URL Components Snapshots > UrlDetailsModal > should render with long URLs 1`] = `
"<dialog data-v-dd4104c0="" class="modal-dialog shadow-xl">
  <div data-v-dd4104c0="" class="modal-content container-primary">
    <modal-header-stub data-v-dd4104c0="" title="URL Details: long123"></modal-header-stub>
    <div data-v-dd4104c0="" class="modal-body">
      <qr-code-section-stub data-v-dd4104c0="" short-code="long123" qr-code-url=""></qr-code-section-stub>
      <!--v-if-->
      <!--v-if-->
      <url-form-stub data-v-dd4104c0="" short-url="http://localhost:3000/long123" short-code="long123" original-url="https://very-long-example-url-that-should-be-displayed-properly.com/with/many/path/segments" title="Example Website" owner="testuser"></url-form-stub>
    </div>
  </div>
</dialog>"
`;

exports[`URL Components Snapshots > UrlDetailsModal > should render with minimal props 1`] = `
"<dialog data-v-dd4104c0="" class="modal-dialog shadow-xl">
  <div data-v-dd4104c0="" class="modal-content container-primary">
    <modal-header-stub data-v-dd4104c0="" title="URL Details: min"></modal-header-stub>
    <div data-v-dd4104c0="" class="modal-body">
      <qr-code-section-stub data-v-dd4104c0="" short-code="min" qr-code-url=""></qr-code-section-stub>
      <!--v-if-->
      <!--v-if-->
      <url-form-stub data-v-dd4104c0="" short-url="http://localhost:3000/min" short-code="min" original-url="https://a.co" title="" owner="user"></url-form-stub>
    </div>
  </div>
</dialog>"
`;

exports[`URL Components Snapshots > UrlDetailsModal > should render with special characters in URLs 1`] = `
"<dialog data-v-dd4104c0="" class="modal-dialog shadow-xl">
  <div data-v-dd4104c0="" class="modal-content container-primary">
    <modal-header-stub data-v-dd4104c0="" title="URL Details: special123"></modal-header-stub>
    <div data-v-dd4104c0="" class="modal-body">
      <qr-code-section-stub data-v-dd4104c0="" short-code="special123" qr-code-url=""></qr-code-section-stub>
      <!--v-if-->
      <!--v-if-->
      <url-form-stub data-v-dd4104c0="" short-url="http://localhost:3000/special123" short-code="special123" original-url="https://example.com/path?param=value&amp;other=test#section" title="Example Website" owner="testuser"></url-form-stub>
    </div>
  </div>
</dialog>"
`;
